version/0.27/_sources/api/solver/_autosummary/settings/multi_component_diffusion_mf.rst.txt
:orphan:

.. _multi_component_diffusion_mf:

multi_component_diffusion_mf
============================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.multi_component_diffusion_mf
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`multi_component_diffusion_mf_child <multi_component_diffusion_mf_child>`


.. rubric:: Included in:

============================   ====================

Parent                                      Summary

============================   ====================
:ref:`options_2 <options_2>`       'options' child.

============================   ====================

